--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		
 		<!-- External CSS file -->
-		<link rel="stylesheet" href="./styles.css">
+		<link rel="stylesheet" href="../css/styles.css">
 		
 		<title>Milbert John Castillo | Web Developer Portfolio</title>
 	</head>
